--- a/app/src/main/res/layout/layout_main_game.xml
+++ b/app/src/main/res/layout/layout_main_game.xml
@@ -107,6 +107,10 @@
         android:layout_below="@id/layout_desc"
         android:gravity="center_horizontal">
 
+        <View
+            android:layout_width="40dp"
+            android:layout_height="match_parent" />
+
         <ImageButton
             android:id="@+id/imageButton_feed"
             android:layout_width="80dp"
@@ -121,6 +125,27 @@
             android:layout_below="@+id/imageView_main_monster"
             android:layout_marginLeft="10dp"
             android:src="@android:drawable/btn_star_big_on" />
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/imageButton_dna_up"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:padding="4dp"
+                android:src="@android:drawable/ic_input_add" />
+
+            <ImageButton
+                android:id="@+id/imageButton_dna_down"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:padding="4dp"
+                android:src="@android:drawable/ic_delete" />
+
+        </LinearLayout>
 
     </LinearLayout>
 
