--- a/app/src/main/res/layout/layout_main_game.xml
+++ b/app/src/main/res/layout/layout_main_game.xml
@@ -15,13 +15,13 @@
         android:padding="10dp">
 
         <ImageView
-            android:id="@+id/imageView_feed"
+            android:id="@+id/imageView_DNA"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:src="@mipmap/ic_launcher" />
 
         <TextView
-            android:id="@+id/textView_feed_count"
+            android:id="@+id/textView_DNA_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_vertical"
@@ -112,19 +112,34 @@
             android:layout_height="match_parent" />
 
         <ImageButton
-            android:id="@+id/imageButton_feed"
+            android:id="@+id/imageButton_DNA"
             android:layout_width="80dp"
             android:layout_height="80dp"
             android:layout_below="@+id/imageView_main_monster"
-            android:src="@android:drawable/ic_input_add" />
+            android:src="@mipmap/ic_launcher" />
 
-        <ImageButton
-            android:id="@+id/imageButton_evolution"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:layout_below="@+id/imageView_main_monster"
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:layout_marginLeft="10dp"
-            android:src="@android:drawable/btn_star_big_on" />
+            android:orientation="vertical">
+
+            <ImageButton
+                android:id="@+id/imageButton_evolution"
+                android:layout_width="80dp"
+                android:layout_height="80dp"
+                android:layout_below="@+id/imageView_main_monster"
+                android:src="@android:drawable/btn_star_big_on" />
+
+            <TextView
+                android:id="@+id/textView_dna_use"
+                android:layout_width="80dp"
+                android:layout_height="20dp"
+                android:background="@color/color_959595"
+                android:gravity="center"
+                android:text="0" />
+
+        </LinearLayout>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -132,14 +147,14 @@
             android:orientation="vertical">
 
             <ImageButton
-                android:id="@+id/imageButton_dna_up"
+                android:id="@+id/imageButton_DNA_up"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:padding="4dp"
                 android:src="@android:drawable/ic_input_add" />
 
             <ImageButton
-                android:id="@+id/imageButton_dna_down"
+                android:id="@+id/imageButton_DNA_down"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:padding="4dp"
