--- a/app/src/main/res/layout/layout_main_game.xml
+++ b/app/src/main/res/layout/layout_main_game.xml
@@ -44,7 +44,7 @@
         android:layout_height="0dp"
         android:layout_below="@+id/layout_status"
         android:background="@android:color/transparent"
-        android:scaleType="fitXY"
+        android:scaleType="fitCenter"
         android:src="@mipmap/ic_launcher" />
 
     <ImageView
@@ -60,7 +60,7 @@
         android:id="@+id/layout_desc"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_below="@id/imageView_monster_frame"
+        android:layout_below="@id/imageButton_monster"
         android:gravity="center_horizontal"
         android:orientation="vertical"
         android:paddingBottom="15dp"
