Add monster book activity

--- a/app/src/main/res/layout/layout_main_game.xml
+++ b/app/src/main/res/layout/layout_main_game.xml
@@ -44,6 +44,7 @@
             android:src="@drawable/setting_icon" />
 
         <ImageButton
+            android:id="@+id/imageButton_monster_book"
             android:layout_width="55dp"
             android:layout_height="55dp"
             android:layout_centerVertical="true"
