--- a/app/src/main/res/layout/layout_main_game.xml
+++ b/app/src/main/res/layout/layout_main_game.xml
@@ -169,4 +169,22 @@
 
     </LinearLayout>
 
+    <Button
+        android:id="@+id/button_resetForDebug"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
+        android:onClick="resetForDebug"
+        android:text="Reset for debug" />
+
+    <TextView
+        android:id="@+id/textView_debug"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/button_resetForDebug"
+        android:background="@color/color_000000"
+        android:padding="3dp"
+        android:text="debug_information"
+        android:textColor="@color/color_FF0000" />
+
 </RelativeLayout>
