--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,13 @@
     android:layout_height="match_parent">
 
     <fragment
-        android:name="ui.MainFragment"
+        android:id="@+id/fragment_main"
+        android:name="ui.monstermain.MonsterMainFragment"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
+
+    <RelativeLayout
+        android:id="@+id/layout_main_monster_book"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
 
