--- a/app/src/main/res/animator/anim_slide_out_left.xml
+++ b/app/src/main/res/animator/anim_slide_out_left.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <objectAnimator xmlns:android="http://schemas.android.com/apk/res/android"
     android:duration="100"
+    android:interpolator="@android:anim/accelerate_interpolator"
     android:propertyName="x"
-    android:shareInterpolator="@android:anim/accelerate_interpolator"
     android:valueFrom="0"
     android:valueTo="-1000"
     android:valueType="floatType" />
