--- a/app/src/main/res/layout/layout_monster_book.xml
+++ b/app/src/main/res/layout/layout_monster_book.xml
@@ -2,8 +2,29 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_red_30"
+    android:background="@color/color_red_60"
     android:orientation="vertical">
+
+    <RelativeLayout
+        android:id="@+id/mb_layout_status"
+        android:layout_width="match_parent"
+        android:layout_height="60dp"
+        android:layout_alignParentTop="true"
+        android:background="@android:color/transparent">
+
+        <ImageButton
+            android:id="@+id/mb_imageButton_back"
+            android:layout_width="55dp"
+            android:layout_height="55dp"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:layout_marginRight="30dp"
+            android:background="@android:color/transparent"
+            android:padding="5dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/back_icon" />
+
+    </RelativeLayout>
 
     <TextView
         android:layout_width="wrap_content"
