--- a/app/src/main/res/layout/layout_monster_book.xml
+++ b/app/src/main/res/layout/layout_monster_book.xml
@@ -2,13 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/color_red_60"
+    android:alpha="0.95"
+    android:background="@drawable/bitmap_lined_background"
     android:orientation="vertical">
 
     <RelativeLayout
         android:id="@+id/mb_layout_status"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="70dp"
         android:layout_alignParentTop="true"
         android:background="@android:color/transparent">
 
@@ -18,9 +19,9 @@
             android:layout_height="55dp"
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="30dp"
+            android:layout_marginRight="5dp"
             android:background="@android:color/transparent"
-            android:padding="5dp"
+            android:padding="2dp"
             android:scaleType="fitCenter"
             android:src="@drawable/back_icon" />
 
