--- a/app/src/main/res/layout/layout_monster_book.xml
+++ b/app/src/main/res/layout/layout_monster_book.xml
@@ -21,9 +21,8 @@
             android:layout_centerVertical="true"
             android:layout_marginRight="5dp"
             android:background="@android:color/transparent"
-            android:padding="2dp"
             android:scaleType="fitCenter"
-            android:src="@drawable/back_icon" />
+            android:src="@drawable/ic_back" />
 
     </RelativeLayout>
 
