--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,7 +4,16 @@
     <color name="colorPrimaryDark">#303F9F</color>
     <color name="colorAccent">#FF4081</color>
 
+    <color name="color_red">#FF0000</color>
     <color name="color_red_60">#99FF0000</color>
+    <color name="color_orange">#ED7014</color>
+    <color name="color_orange_60">#99ED7014</color>
+    <color name="color_dkgreen">#00A600</color>
+    <color name="color_dkgreen_60">#9900A600</color>
+    <color name="color_blue">#0000FF</color>
+    <color name="color_blue_60">#990000FF</color>
+    <color name="color_black_60">#99000000</color>
+    <color name="color_black_30">#4D000000</color>
     <color name="color_000000">#000000</color>
     <color name="color_FF0000">#FF0000</color>
     <color name="color_959595">#959595</color>
