Modify to editable DNA use on new window

--- a/app/src/main/res/layout/layout_monster_main.xml
+++ b/app/src/main/res/layout/layout_monster_main.xml
@@ -193,6 +193,8 @@
                 android:id="@+id/textView_DNA_use"
                 android:layout_width="85dp"
                 android:layout_height="20dp"
+                android:layout_marginLeft="2dp"
+                android:layout_marginRight="2dp"
                 android:background="@drawable/bg_dna_use"
                 android:gravity="center"
                 android:shadowColor="@color/color_black_60"
