--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,5 @@
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="imageView_monster_frame_margin_size">80dp</dimen>
     <dimen name="imageView_monster_image_margin_size">20dp</dimen>
+    <dimen name="edit_dna_use_popup_window_margin_bottom">100dp</dimen>
 </resources>
