--- a/app/src/main/res/layout/layout_monster_main.xml
+++ b/app/src/main/res/layout/layout_monster_main.xml
@@ -81,8 +81,7 @@
         android:layout_height="0dp"
         android:layout_below="@+id/layout_status"
         android:background="@android:color/transparent"
-        android:scaleType="fitCenter"
-        android:src="@mipmap/ic_launcher" />
+        android:scaleType="fitCenter" />
 
     <ImageView
         android:id="@+id/imageView_monster_effect"
